solution-2-kube-prometheus-stack/templates/grafana-ingress.yml
# https://grafana-kubeprometheus.apps.cluster.example.com/login
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: kubeprometheus
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: openshift-dev-ingress
  selector:
    app.kubernetes.io/name: grafana
  rules:
    - host: grafana-kubeprometheus.apps.cluster.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
